--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "ecommerce" "\0"
+            VALUE "FileDescription", "thefood" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "ecommerce" "\0"
+            VALUE "InternalName", "thefood" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "ecommerce.exe" "\0"
-            VALUE "ProductName", "ecommerce" "\0"
+            VALUE "OriginalFilename", "thefood.exe" "\0"
+            VALUE "ProductName", "thefood" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
