--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   equatable: ^2.0.3
   dio: ^4.0.0
   json_annotation: ^4.7.0
-  go_router: ^5.0.0
+  go_router: ^5.0.5
+  paginable: ^2.0.0
 
 
 
