--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,8 @@ dependencies:
   paginable: ^2.0.0
   kartal: ^2.4.3
   url_launcher: ^6.1.6
-
-
+  flutter_svg: ^1.1.5
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -32,8 +32,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # fonts:
