--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_svg: ^1.1.5
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
+  firebase_auth: ^3.11.2
+  firebase_core: ^1.24.0
 
 dev_dependencies:
   flutter_test:
