--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   firebase_auth: ^3.11.2
+  internet_connection_checker: ^1.0.0+1
   firebase_core: ^1.24.0
 
 dev_dependencies:
