--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   firebase_auth: ^3.11.2
   internet_connection_checker: ^1.0.0+1
   firebase_core: ^1.24.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +33,7 @@ dev_dependencies:
   very_good_analysis: ^3.1.0
   build_runner: ^2.0.0
   json_serializable: ^6.4.0
+  hive_generator: ^1.1.3
 
 
 flutter:
