--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,17 +15,16 @@ dependencies:
   dio: ^4.0.0
   json_annotation: ^4.7.0
   go_router: ^5.0.5
-  paginable: ^2.0.0
   kartal: ^2.4.3
   url_launcher: ^6.1.6
   flutter_svg: ^1.1.5
-  shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   firebase_auth: ^3.11.2
-  internet_connection_checker: ^1.0.0+1
   firebase_core: ^1.24.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  cached_network_image: ^3.2.2
+  connectivity_plus: ^2.3.9
 
 dev_dependencies:
   flutter_test:
