--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   hive_flutter: ^1.1.0
   cached_network_image: ^3.2.2
   connectivity_plus: ^2.3.9
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
