--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cached_network_image: ^3.2.2
   connectivity_plus: ^2.3.9
   path_provider: ^2.0.11
+  formz: ^0.4.1
 
 dev_dependencies:
   flutter_test:
