--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,26 +7,48 @@ environment:
   sdk: '>=2.18.1 <3.0.0'
 
 dependencies:
+
+  authentication_repository:
+    path: packages/authentication_repository
+
+  form_inputs:
+    path: packages/form_inputs
+
+  cache:
+    path: packages/cache
+
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+
+  # State Management
   flutter_bloc: ^8.1.1
   equatable: ^2.0.3
-  dio: ^4.0.0
-  json_annotation: ^4.7.0
-  go_router: ^5.0.5
-  kartal: ^2.4.3
-  url_launcher: ^6.1.6
-  flutter_svg: ^1.1.5
-  shimmer: ^2.0.0
+
+  # Firebase
   firebase_auth: ^3.11.2
   firebase_core: ^1.24.0
+
+  # Style
+  cupertino_icons: ^1.0.2
+  kartal: ^2.4.3
+  flutter_svg: ^1.1.5
+  shimmer: ^2.0.0
+  cached_network_image: ^3.2.2
+  formz: ^0.4.1
+
+  # Navigation
+  go_router: ^5.0.5
+
+  # Network
+  dio: ^4.0.0
+  url_launcher: ^6.1.6
+  json_annotation: ^4.7.0
+  connectivity_plus: ^2.3.9
+
+  # Local Storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  cached_network_image: ^3.2.2
-  connectivity_plus: ^2.3.9
   path_provider: ^2.0.11
-  formz: ^0.4.1
 
 dev_dependencies:
   flutter_test:
