--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -14,6 +14,7 @@ linter:
     public_member_api_docs: false
     lines_longer_than_80_chars: false
     always_use_package_imports: true
+    avoid_redundant_argument_values: true
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
