--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
   flutter_offline: ^2.1.0
+  image_picker: ^0.8.6
+  cloud_firestore: ^3.5.1
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
