--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # Firebase
   firebase_auth: ^3.11.2
   firebase_core: ^1.24.0
+  cloud_firestore: ^3.5.1
 
   # Style
   cupertino_icons: ^1.0.2
@@ -38,6 +39,8 @@ dependencies:
   shimmer: ^2.0.0
   cached_network_image: ^3.2.2
   formz: ^0.4.1
+  image_picker: ^0.8.6
+  card_swiper: ^2.0.4
 
   # Navigation
   go_router: ^5.0.5
@@ -45,17 +48,13 @@ dependencies:
   # Network
   dio: ^4.0.0
   url_launcher: ^6.1.6
-  json_annotation: ^4.7.0
-  connectivity_plus: ^2.3.9
+  flutter_offline: ^2.1.0
 
   # Local Storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
-  flutter_offline: ^2.1.0
-  image_picker: ^0.8.6
-  cloud_firestore: ^3.5.1
-  carousel_slider: ^4.1.1
+
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +63,7 @@ dev_dependencies:
   build_runner: ^2.0.0
   json_serializable: ^6.4.0
   hive_generator: ^1.1.3
+  json_annotation: ^4.7.0
 
 
 flutter:
