--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
 
   # State Management
   flutter_bloc: ^8.1.1
-  equatable: ^2.0.3
+  equatable: ^2.0.5
 
   # Firebase
   firebase_auth: ^3.11.2
@@ -33,9 +33,9 @@ dependencies:
   cloud_firestore: ^3.5.1
 
   # Style
-  cupertino_icons: ^1.0.2
-  kartal: ^2.4.3
-  flutter_svg: ^1.1.5
+  cupertino_icons: ^1.0.5
+  kartal: ^2.5.1
+  flutter_svg: ^1.1.6
   shimmer: ^2.0.0
   cached_network_image: ^3.2.2
   formz: ^0.4.1
@@ -43,10 +43,10 @@ dependencies:
   card_swiper: ^2.0.4
 
   # Navigation
-  go_router: ^5.0.5
+  go_router: ^5.1.6
 
   # Network
-  dio: ^4.0.0
+  dio: ^4.0.6
   url_launcher: ^6.1.6
   flutter_offline: ^2.1.0
 
@@ -54,15 +54,16 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
+  google_mobile_ads: ^2.3.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   very_good_analysis: ^3.1.0
-  build_runner: ^2.0.0
-  json_serializable: ^6.4.0
-  hive_generator: ^1.1.3
+  build_runner: ^2.3.2
+  json_serializable: ^6.5.4
+  hive_generator: ^2.0.0
   json_annotation: ^4.7.0
 
 
