--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
-  google_mobile_ads: ^2.3.0
+  # google_mobile_ads: ^2.3.0
 
 
 dev_dependencies:
