--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
   timeago: ^3.3.0
+  firebase_storage: ^10.3.11
   # google_mobile_ads: ^2.3.0
 
 
