--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,6 +15,7 @@ linter:
     lines_longer_than_80_chars: false
     always_use_package_imports: true
     avoid_redundant_argument_values: true
+    use_build_context_synchronously: false
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
